--- a/src/main/resources/templates/auth/kakaoLogin.html
+++ b/src/main/resources/templates/auth/kakaoLogin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="UTF-8">
@@ -12,7 +13,7 @@
 </head>
 <body>
 
-<%@ include file="../include/nav.jsp" %>
+<!--<%@ include file="../include/nav.jsp" %>-->
 
 <div class="container">
     <div class="box">
