--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -28,21 +28,18 @@
         </div>
         <div class="profile__info">
             <div class="profile__title">
-                <h1>serranoarevalo</h1>
+                <h1 th:text="${user.getName()}"></h1>
                 <div id="follow_check">
-<!--                    <c:choose>-->
-<!--                        <c:when test="${followCheck eq  1}">-->
-<!--                            <button onClick="follow(false)" class="profile_edit_btn">팔로잉</button>-->
-<!--                        </c:when>-->
-<!--                        <c:otherwise>-->
-<!--                            <button onClick="follow(true)" class="profile_follow_btn">팔로우</button>-->
-<!--                        </c:otherwise>-->
-<!--                    </c:choose>-->
+
+                    <input type="hidden" id="userId" th:value="${user.id}">
+
                     <div th:if = "${followCheck eq 1}">
-                        <button onClick="follow(false)" class="profile_edit_btn">팔로잉</button>
+                        <button th:data-parameter="${user.id}"
+                                th:onClick="follow(false)" class="profile_edit_btn">팔로잉</button>
                     </div>
                     <div th:unless = "${followCheck eq 1}">
-                        <button onClick="follow(true)" class="profile_follow_btn">팔로우</button>
+                        <button th:data-parameter="${user.id}"
+                                th:onClick="follow(false)" class="profile_follow_btn">팔로우</button>
                     </div>
                 </div>
 
@@ -50,7 +47,9 @@
                     function follow(check){
                         // true -> follow 하기
                         // false -> unFollow 하기
-                        let url = "/follow/${toUser.id}";
+                        let userId = document.getElementById('userId').val;
+                        console.log(userId);
+                        let url = "/follow/"+userId;
                         if(check){
                             fetch(url,{
                                 method: "POST"
@@ -59,7 +58,7 @@
                             }).then(function(res){
                                 if(res === "ok"){
                                     let follow_check_el = document.querySelector("#follow_check");
-                                    follow_check_el.innerHTML = "<button onClick='follow(false)' class='profile_edit_btn'>팔로잉</button>";
+                                    follow_check_el.innerHTML = "<button onClick='follow(false, "+ userId +")' class='profile_edit_btn'>팔로잉</button>";
                                 }
                             });
                         }else{
@@ -70,7 +69,7 @@
                             }).then(function(res){
                                 if(res === "ok"){
                                     let follow_check_el = document.querySelector("#follow_check");
-                                    follow_check_el.innerHTML = "<button onClick='follow(true)' class='profile_follow_btn'>팔로우</button>";
+                                    follow_check_el.innerHTML = "<button onClick='follow(false, "+ userId +")' class='profile_follow_btn'>팔로우</button>";
                                 }
                             });
                         }
@@ -197,7 +196,7 @@
 
 
 <!--<%@ include file="../include/footer.jsp"%>-->
-<script src="/js/follow.js"></script>
+<!--<script src="/js/follow.js"></script>-->
 
 <script>
     $(function() {
