1. Follow js logic 분리 - html script 를 javascript 로 분리함

--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -17,7 +17,6 @@
 
 <!--<%@ include file="../include/nav.jsp"%>-->
 <!--<h1>${toUser.id }</h1>-->
-<h1 th:text="${toUser.id}"></h1>
 <main id="profile">
     <header class="profile__header">
         <div class="avatar__container">
@@ -28,8 +27,9 @@
         </div>
         <div class="profile__info">
             <div class="profile__title">
-                <h1 th:text="${toUser.getName()}"></h1>
-                <input type="hidden" id="toUserId" th:value="${toUser.id}">
+<!--                <h1 th:text="${user.getName()}"></h1>-->
+                <h1 th:text="${user.username}"></h1>
+                <input type="hidden" id="toUserId" th:value="${user.id}">
                 <div id="follow_check">
                     <div th:if = "${followCheck eq 1}">
                         <button onClick="follow(false);" class="profile_edit_btn">팔로잉</button>
@@ -39,37 +39,6 @@
                     </div>
                 </div>
 
-                <script>
-                    function follow(check){
-                        // true -> follow 하기
-                        // false -> unFollow 하기
-                        let toUserId = document.getElementById('toUserId').value;
-                        let url = "/follow/"+toUserId;
-                        if(check){
-                            fetch(url,{
-                                method: "POST"
-                            }).then(function(res){
-                                return res.text();
-                            }).then(function(res){
-                                if(res === "ok"){
-                                    let follow_check_el = document.querySelector("#follow_check");
-                                    follow_check_el.innerHTML = "<button onClick='follow(false);' class='profile_edit_btn'>팔로잉</button>";
-                                }
-                            });
-                        }else{
-                            fetch(url,{
-                                method: "DELETE"
-                            }).then(function(res){
-                                return res.text();
-                            }).then(function(res){
-                                if(res === "ok"){
-                                    let follow_check_el = document.querySelector("#follow_check");
-                                    follow_check_el.innerHTML = "<button onClick='follow(true);' class='profile_follow_btn'>팔로우</button>";
-                                }
-                            });
-                        }
-                    }
-                </script>
 
                 <a href="edit-profile.html">
                     <button class="profile_edit_btn">Edit Profile</button>
@@ -81,10 +50,9 @@
                 <li class="profile__stat"><span class="profile__stat-number">44</span> following</li>
             </ul>
             <p class="profile__bio">
-                <span class="profile__fullname">Nicolás Serrano Arévalo</span> Lorem ipsum dolor sit amet,
-                consectetur adipisicing elit. Voluptas repellendus cumque quo voluptatum voluptatem, maxime
-                nobis. Quae incidunt cum expedita facilis libero officiis, delectus inventore tempore, ex nulla
-                dolore cumque. <a href="http://serranoarevalo.com" class="profile__link">serranoarevalo.com</a>
+                <span class="profile__fullname" th:text="${user.name}"></span>
+                <span th:text="${user.bio}"></span>
+                <a th:href="${user.website}" class="profile__link"></a>
             </p>
         </div>
     </header>
@@ -191,7 +159,7 @@
 
 
 <!--<%@ include file="../include/footer.jsp"%>-->
-<!--<script src="/js/follow.js"></script>-->
+<script src="/js/follow.js"></script>
 
 <script>
     $(function() {
