--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -1,41 +1,40 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Mingstagram</title>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
           rel="stylesheet">
-    <link rel="shortcut icon" href="/images/favicon.ico">
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/modal.css">
+    <link href="/images/favicon.ico" rel="shortcut icon">
+    <link href="/css/styles.css" rel="stylesheet">
+    <link href="/css/modal.css" rel="stylesheet">
 </head>
 
 <body>
 
-<!--<%@ include file="../include/nav.jsp"%>-->
-<!--<h1>${toUser.id }</h1>-->
+<div th:replace="/include/nav.html :: fragment-nav"></div>
 <main id="profile">
     <header class="profile__header">
         <div class="avatar__container">
-            <form id="frm_profile_img" action="/user/profileUpload" method="post">
-                <input type="file" name="profileImage" style="display: none;" />
+            <form action="/user/profileUpload" id="frm_profile_img" method="post">
+                <input name="profileImage" style="display: none;" type="file"/>
             </form>
-            <img src="/images/avatar.jpg" id="profile_image" style="cursor: pointer" />
+            <img id="profile_image" src="/images/avatar.jpg" style="cursor: pointer"/>
         </div>
         <div class="profile__info">
             <div class="profile__title">
-<!--                <h1 th:text="${user.getName()}"></h1>-->
+                <!--                <h1 th:text="${user.getName()}"></h1>-->
                 <h1 th:text="${user.username}"></h1>
-                <input type="hidden" id="toUserId" th:value="${user.id}">
+                <input id="toUserId" th:value="${user.id}" type="hidden">
                 <div id="follow_check">
-                    <div th:if = "${followCheck eq 1}">
-                        <button onClick="follow(false);" class="profile_edit_btn">팔로잉</button>
+                    <div th:if="${followCheck eq 1}">
+                        <button class="profile_edit_btn" onClick="follow(false);">팔로잉</button>
                     </div>
-                    <div th:unless = "${followCheck eq 1}">
-                        <button onClick="follow(true);" class="profile_follow_btn">팔로우</button>
+                    <div th:unless="${followCheck eq 1}">
+                        <button class="profile_follow_btn" onClick="follow(true);">팔로우</button>
                     </div>
                 </div>
 
@@ -52,7 +51,7 @@
             <p class="profile__bio">
                 <span class="profile__fullname" th:text="${user.name}"></span>
                 <span th:text="${user.bio}"></span>
-                <a th:href="${user.website}" class="profile__link"></a>
+                <a class="profile__link" th:href="${user.website}"></a>
             </p>
         </div>
     </header>
@@ -150,25 +149,27 @@
 <div class="profile__overlay">
     <i class="fa fa-times"></i>
     <div class="profile__overlay-container">
-        <a href="#" class="profile__overlay-link">Change password</a> <a href="#"
-                                                                         class="profile__overlay-link">Authorize Apps</a> <a href="#" class="profile__overlay-link">Notifications</a>
-        <a href="#" class="profile__overlay-link" id="logout">Log Out</a> <a href="#"
-                                                                             class="profile__overlay-link" id="cancel">Cancel</a>
+        <a class="profile__overlay-link" href="#">Change password</a> <a class="profile__overlay-link"
+                                                                         href="#">Authorize Apps</a>
+        <a class="profile__overlay-link" href="#">Notifications</a>
+        <a class="profile__overlay-link" href="#" id="logout">Log Out</a> <a class="profile__overlay-link"
+                                                                             href="#"
+                                                                             id="cancel">Cancel</a>
     </div>
 </div>
 
+<div th:replace="/include/footer.html :: fragment-footer"></div>
 
-<!--<%@ include file="../include/footer.jsp"%>-->
 <script src="/js/follow.js"></script>
 
 <script>
-    $(function() {
+    $(function () {
         //이미지 클릭시 업로드창 실행
-        $('#profile_image').click(function() {
+        $('#profile_image').click(function () {
             $("input[name='profileImage']").click();
         })
         //업로드 파일체인지가 됬을경우 실행되는 이벤트  form태그에 fileProfile은 hidden으로 넣어줌
-        $("input[name='profileImage']").change(function(e) {
+        $("input[name='profileImage']").change(function (e) {
             $("#frm_profile_img").submit();
         })
     })
