--- a/src/main/resources/templates/include/nav.html
+++ b/src/main/resources/templates/include/nav.html
@@ -1,12 +1,22 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
+<div sec:authorize="isAuthenticated()">
+    <div sec:authentication="name">username</div>
+    <div sec:authentication="principal">username</div>
+</div>
+
 <div th:fragment="fragment-nav">
     <nav class="navigation">
+        <div sec:authorize="isAuthenticated()">
+            <div sec:authentication="name">username</div>
+            <div sec:authentication="principal">username</div>
+            <div th:text="${principalId}"></div>
+        </div>
         <a href="feed.html"> <img src="/images/logo.png" />
         </a> <input type="text" placeholder="Search">
         <div class="navigation__links">
-            <a href="explore.html" class="navigation__link">
+            <a href="/image/explore.html" class="navigation__link">
                 <i class="fa fa-compass"></i>
             </a>
             <a href="#" class="navigation__link like_popup">
